jss-compiler/tests/semantic_errors/multidimensional_mismatch_access.jss
function void main() {
    let int[2][3] matriz;
    let int val = matriz[0];
}
